--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,8 @@ android {
         applicationId "com.alv.app"
         minSdkVersion 15
         targetSdkVersion 22
+        // Enabling multidex support.
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -16,6 +18,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
+
 }
 
 dependencies {
@@ -27,4 +30,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.google.android.gms:play-services:9.0.1'
     compile 'com.android.support:design:23.4.0'
+    compile 'com.android.support:multidex:1.0.0'
 }
