--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.alv.app"
-    android:versionCode="6"
-    android:versionName="1.4.1">
+    android:versionCode="7"
+    android:versionName="1.4.2">
 
     <uses-sdk
         android:minSdkVersion="15"
-        android:targetSdkVersion="22" />
+        android:targetSdkVersion="23" />
 
     <uses-feature
         android:name="android.hardware.camera"
@@ -21,82 +21,83 @@
 
     <android:uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <android:uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <!-- android:name=".MyApplication" -->
 
     <application
-        android:name=".MyApplication"
-        android:allowBackup="true"
-        android:icon="@drawable/icone192"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme">
-        <activity
-            android:name=".SplashScreen"
-            android:configChanges="keyboardHidden|orientation|screenSize"
-            android:label="@string/app_name"
-            android:screenOrientation="unspecified">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+     android:allowBackup="true"
+     android:icon="@drawable/icone192"
+     android:label="@string/app_name"
+     android:theme="@style/AppTheme"
+     android:name="com.alv.app.MyApplication">
+     <activity
+         android:name=".SplashScreen"
+         android:configChanges="keyboardHidden|orientation|screenSize"
+         android:label="@string/app_name"
+         android:screenOrientation="unspecified">
+         <intent-filter>
+             <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".PageListActivity"
-            android:configChanges="keyboardHidden|orientation|screenSize"
-            android:label="@string/app_name"
-            android:screenOrientation="unspecified" />
-        <activity
-            android:name=".PageDetailActivity"
-            android:configChanges="keyboardHidden|orientation|screenSize"
-            android:label="@string/title_page_detail"
-            android:parentActivityName=".PageListActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.testwebview.PageListActivity" />
-        </activity>
-        <activity
-            android:name=".MaterielList2"
-            android:configChanges="keyboardHidden|orientation|screenSize"
-            android:label="@string/title_activity_materiel_list2"
-            android:screenOrientation="unspecified" />
-        <activity
-            android:name=".DistanceActivity"
-            android:configChanges="keyboardHidden|orientation|screenSize"
-            android:label="@string/title_activity_distance"
-            android:screenOrientation="unspecified" />
-        <activity
-            android:name=".TirActivity"
-            android:configChanges="keyboardHidden|orientation|screenSize"
-            android:label="@string/title_activity_tir"
-            android:screenOrientation="unspecified" />
-        <activity
-            android:name=".TirGraphActivity"
-            android:configChanges="keyboardHidden|orientation|screenSize"
-            android:label="@string/title_activity_tir_graph"
-            android:screenOrientation="unspecified" />
-        <activity
-            android:name=".TirEditDialog"
-            android:configChanges="keyboardHidden|orientation|screenSize"
-            android:label="@string/title_activity_tir"
-            android:screenOrientation="unspecified"
-            android:theme="@android:style/Theme.Dialog" />
-        <activity
-            android:name=".cropcircles.BlasonActivity"
-            android:configChanges="keyboardHidden|orientation|screenSize"
-            android:label="@string/title_activity_Circle"
-            android:screenOrientation="unspecified" />
-        <activity
-            android:name=".CharteActivity"
-            android:configChanges="keyboardHidden|orientation|screenSize"
-            android:label="@string/title_activity_charte"
-            android:screenOrientation="unspecified" />
-        <!--
-             The API key for Google Maps-based APIs is defined as a string resource.
-             (See the file "res/values/google_maps_api.xml").
-             Note that the API key is linked to the encryption key used to sign the APK.
-             You need a different API key for each encryption key, including the release key that is used to
-             sign the APK for publishing.
-             You can define the keys for the debug and release targets in src/debug/ and src/release/. 
-        -->
+             <category android:name="android.intent.category.LAUNCHER" />
+         </intent-filter>
+     </activity>
+     <activity
+         android:name=".PageListActivity"
+         android:configChanges="keyboardHidden|orientation|screenSize"
+         android:label="@string/app_name"
+         android:screenOrientation="unspecified" />
+     <activity
+         android:name=".PageDetailActivity"
+         android:configChanges="keyboardHidden|orientation|screenSize"
+         android:label="@string/title_page_detail"
+         android:parentActivityName=".PageListActivity">
+         <meta-data
+             android:name="android.support.PARENT_ACTIVITY"
+             android:value="com.alv.app.PageListActivity" />
+     </activity>
+     <activity
+         android:name=".MaterielList2"
+         android:configChanges="keyboardHidden|orientation|screenSize"
+         android:label="@string/title_activity_materiel_list2"
+         android:screenOrientation="unspecified" />
+     <activity
+         android:name=".DistanceActivity"
+         android:configChanges="keyboardHidden|orientation|screenSize"
+         android:label="@string/title_activity_distance"
+         android:screenOrientation="unspecified" />
+     <activity
+         android:name=".TirActivity"
+         android:configChanges="keyboardHidden|orientation|screenSize"
+         android:label="@string/title_activity_tir"
+         android:screenOrientation="unspecified" />
+     <activity
+         android:name=".TirGraphActivity"
+         android:configChanges="keyboardHidden|orientation|screenSize"
+         android:label="@string/title_activity_tir_graph"
+         android:screenOrientation="unspecified" />
+     <activity
+         android:name=".TirEditDialog"
+         android:configChanges="keyboardHidden|orientation|screenSize"
+         android:label="@string/title_activity_tir"
+         android:screenOrientation="unspecified"
+         android:theme="@android:style/Theme.Dialog" />
+     <activity
+         android:name=".cropcircles.BlasonActivity"
+         android:configChanges="keyboardHidden|orientation|screenSize"
+         android:label="@string/title_activity_Circle"
+         android:screenOrientation="unspecified" />
+     <activity
+         android:name=".CharteActivity"
+         android:configChanges="keyboardHidden|orientation|screenSize"
+         android:label="@string/title_activity_charte"
+         android:screenOrientation="unspecified" />
+     <!--
+          The API key for Google Maps-based APIs is defined as a string resource.
+          (See the file "res/values/google_maps_api.xml").
+          Note that the API key is linked to the encryption key used to sign the APK.
+          You need a different API key for each encryption key, including the release key that is used to
+          sign the APK for publishing.
+          You can define the keys for the debug and release targets in src/debug/ and src/release/.
+     -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
